Register device gcm token i update istog
